added clear both

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@ layout: default
 
       <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Leer más</a>
     </article>
+    <div style="clear:both"></div>
   {% endfor %}
 </div>
